--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.8.7",
     "mysql":"^2.5.5",
-    "body-parser":"^1.12.0"
+    "body-parser":"^1.12.0",
+    "socket.io":"1.4.5"
   }
 }
